--- a/src/styles/components/_track.scss
+++ b/src/styles/components/_track.scss
@@ -1,6 +1,6 @@
 .single {
   margin: 0 auto;
-  padding: 6rem 1.5rem 3rem;
+  padding: 6rem 1rem 3rem;
   font-family: $font-1;
   height: auto;
 
@@ -8,8 +8,8 @@
     text-align: center;
 
     img {
-      width: 400px;
-      height: 400px;
+      width: 340px;
+      height: 340px;
     }
 
     img:hover {
